--- a/daily-work/20170207/website/site.html
+++ b/daily-work/20170207/website/site.html
@@ -18,9 +18,11 @@
     <h1 class="headline"><font color="orange">Business Technology Early College High School
       <small><br> In Partnership with SAP & QCC.</small><br></font></h1>
     <ul class="header-subnav">
+      <li><a href="#">News</a></li>
       <li><a href="#">Clubs</a></li>
       <li><a href="#" class="is-active">Home</a></li>
       <li><a target="_blank" href="http://zurb.com/responsive">Calender</a></li>
+      <li><a href="#">About</a></li>
     </ul>
   </header>
   <!-- End Nav -->
@@ -36,7 +38,7 @@
         <div class="service-icon-box">
           <img src="http://www.qcc.cuny.edu/b-tech/images/BTECH_CMYK.png" alt="" class="service-icon">
         </div>
-        <h4 class="service-heading">BTECH</h4>
+        <h4 class="service-heading">Welcome to BTECH</h4>
         <p class="service-description">Students attending Business Technology Early College High School (BTECH) are volunteered to participate in attending QCC, a community college, allowing students to get their associate degree when they graduate.</p>
       </div>
 
