--- a/daily-work/20170207/website/site.html
+++ b/daily-work/20170207/website/site.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HL Site</title>
+    <title>BTECH</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/nav.css">
@@ -17,16 +17,60 @@
   <header class="header">
     <h1 class="headline"><font color="orange">Business Technology Early College High School
       <small><br> In Partnership with SAP & QCC.</small><br></font></h1>
-    <ul class="header-subnav">
-      <li><a href="#">News</a></li>
-      <li><a href="#">Clubs</a></li>
-      <li><a href="#" class="is-active">Home</a></li>
-      <li><a target="_blank" href="http://zurb.com/responsive">Calender</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
   </header>
   <!-- End Nav -->
+  <!-- Test -->
+  <ul class="dropdown menu" data-dropdown-menu id="primary-menu">
+    <li><a href="#">HOME</a></li>
+    <li><a href="#">BTECH NEWS</a></li>
+    <li><a href="#">ACADEMICS</a></li>
+    <li>
+      <a href="#">ABOUT</a>
+      <ul class="menu">
+        <li><a href="#">About BTECH</a></li>
+        <li><a href="#">BTECH Core Values</a></li>
+        <li><a href="#">SAP and BTECH</a></li>
+        <li><a href="#">BTECH Videos</a></li>
+        <li><a href="#">Important Links</a></li>
+      </ul>
+    </li>
+    <li><a href="#">CALENDER</a></li>
+    <li>
+      <a href="#">PARENTS</a>
+      <ul class="menu">
+        <li><a href="#">PTA</a></li>
+        <li><a href="#">Parent Coordinator</a></li>
+        <li><a href="#">Parent Links</a></li>
+        <li><a href="#">BTECH Cell Phone Policy</a></li>
+        <li><a href="#">Purchasing Shirts for PE</a></li>
+      </ul>
+    </li>
+    <div class="button-group">
+      <a class="button">Login</a>
+      <a class="dropdown button arrow-only" type="button" data-toggle="example-dropdown">
+        <span class="show-for-sr">Show menu</span>
+      </a>
+    </div>
 
+    <div class="dropdown-pane" id="example-dropdown" data-dropdown data-auto-focus="true">
+      Please Login from here
+      <form>
+        <div class="row">
+          <div class="medium-6 columns">
+            <label>Name
+              <input type="text" placeholder="Admin123">
+            </label>
+          </div>
+          <div class="medium-6 columns">
+            <label>Password
+              <input type="text" placeholder="abc123">
+            </label>
+          </div>
+        </div>
+      </form>
+    </div>
+  </ul>
+  <!-- Test -->
   <!-- Begin Hero -->
   <br />
   <br />
@@ -55,9 +99,9 @@
       <div class="round-icon">
         <span class="fi-clock"></span>
       </div>
-      <h3>Calender</h3>
+      <h3>Calender Of Events</h3>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, lacus id interdum ultrices, elit metus semper tellus.</p>
+      <p>Mar 8<br>SAP HYBRIS Digital Summit</br><br>School Trip to SAP Summit for selected students.</br><br>Mar 22</br><br>Katie Morgan, Head of SAP North America Visits BTECH</br></p>
     </div>
     <div class="medium-4 columns">
       <div class="round-icon">
@@ -65,7 +109,7 @@
       </div>
       <h3>Latest News</h3>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, lacus id interdum ultrices, elit metus semper tellus.</p>
+      <p>Welcome Letter from BTECH's New Principal<br>Please click on the link below to read the  welcome letter from BTECH's new interim acting principal, Ms. P. Henry.</br></p>
     </div>
     <div class="medium-4 columns">
       <div class="round-icon">
@@ -82,14 +126,13 @@
   <footer class="footer">
     <div class="row">
       <div class="small-12 columns">
-        <p class="slogan">Finger-lickin' good</p>
+        <p class="slogan">BTECH is PTECH</p>
         <p class="links">
           <a href="#">Home</a>
-          <a href="#">Blog</a>
-          <a href="#">Pricing</a>
+          <a href="#">Club</a>
+          <a href="#">News</a>
           <a href="#">About</a>
-          <a href="#">Faq</a>
-          <a href="#">Contact</a>
+          <a href="#">Calender</a>
         </p>
         <p class="copywrite">Copywrite not copypwrite © 2015</p>
       </div>
