--- a/daily-work/20170207/website/site.html
+++ b/daily-work/20170207/website/site.html
@@ -21,7 +21,7 @@
   <!-- End Nav -->
   <!-- Test -->
   <ul class="dropdown menu" data-dropdown-menu id="primary-menu">
-    <li><a href="#">HOME</a></li>
+    <li><a href="file:///C:/Users/Student/Desktop/et-710-s2017/daily-work/20170207/website/dododo/index.html">HOME</a></li>
     <li><a href="#">BTECH NEWS</a></li>
     <li><a href="#">ACADEMICS</a></li>
     <li>
@@ -126,7 +126,7 @@
   <footer class="footer">
     <div class="row">
       <div class="small-12 columns">
-        <p class="slogan">BTECH is PTECH</p>
+        <p class="slogan">BTECH is fum</p>
         <p class="links">
           <a href="#">Home</a>
           <a href="#">Club</a>
