--- a/daily-work/20170207/website/dododo/index.html
+++ b/daily-work/20170207/website/dododo/index.html
@@ -8,21 +8,69 @@
     <link rel="stylesheet" href="css2/foundation.css">
     <link rel="stylesheet" href="css2/app.css">
     <link rel="stylesheet" href="css2/nav.css">
+    <link rel="stylesheet" href="css2/test.css">
   </head>
   <body>
+    <!-- Start Nav -->
+    <!-- Begin Nav -->
     <header class="header">
       <h1 class="headline"><font color="orange">Business Technology Early College High School
         <small><br> In Partnership with SAP & QCC.</small><br></font></h1>
-        <ul class="header-subnav">
-          <li><a href="#">News</a></li>
-          <li><a href="#">Clubs</a></li>
-          <li><a href="file:///C:/Sites/et-710-s2017/daily-work/20170207/website/site.html#" class="is-active">Home</a></li>
-          <li><a target="_blank" href="http://zurb.com/responsive">Calender</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </header>
+    </header>
+    <!-- End Nav -->
       <!-- End Nav -->
+      <!-- Start Test -->
+      <ul class="dropdown menu" data-dropdown-menu id="primary-menu">
+        <li><a href="file:///C:/Users/Student/Desktop/et-710-s2017/daily-work/20170207/website/dododo/index.html">HOME</a></li>
+        <li><a href="#">BTECH NEWS</a></li>
+        <li><a href="#">ACADEMICS</a></li>
+        <li>
+          <a href="#">ABOUT</a>
+          <ul class="menu">
+            <li><a href="#">About BTECH</a></li>
+            <li><a href="#">BTECH Core Values</a></li>
+            <li><a href="#">SAP and BTECH</a></li>
+            <li><a href="#">BTECH Videos</a></li>
+            <li><a href="#">Important Links</a></li>
+          </ul>
+        </li>
+        <li><a href="#">CALENDER</a></li>
+        <li>
+          <a href="#">PARENTS</a>
+          <ul class="menu">
+            <li><a href="#">PTA</a></li>
+            <li><a href="#">Parent Coordinator</a></li>
+            <li><a href="#">Parent Links</a></li>
+            <li><a href="#">BTECH Cell Phone Policy</a></li>
+            <li><a href="#">Purchasing Shirts for PE</a></li>
+          </ul>
+        </li>
+        <div class="button-group">
+          <a class="button">Login</a>
+          <a class="dropdown button arrow-only" type="button" data-toggle="example-dropdown">
+            <span class="show-for-sr">Show menu</span>
+          </a>
+        </div>
 
+        <div class="dropdown-pane" id="example-dropdown" data-dropdown data-auto-focus="true">
+          Please Login from here
+          <form>
+            <div class="row">
+              <div class="medium-6 columns">
+                <label>Name
+                  <input type="text" placeholder="Admin123">
+                </label>
+              </div>
+              <div class="medium-6 columns">
+                <label>Password
+                  <input type="text" placeholder="abc123">
+                </label>
+              </div>
+            </div>
+          </form>
+        </div>
+      </ul>
+      <!-- End Test -->
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
